# absent-zschie-rocket

./: .gitignore  Cargo.toml  README.md  Rocket.toml  generate_2022.bat  log.yml
.github/workflows/: rust.yml
scripts/: generate_2022.bat  generate_2022.sh
src/: main.rs
static/: index.html
