[package]
name = "zastepstwa-zschie-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
reqwest = "0.11.6"
chrono = "0.4.19"
tokio = { version = "1.13.0" }